feat: Add favicon and apple touch icon
Updates the `index.html` to include a favicon and an Apple touch icon. This enhances the application's branding and user experience on various devices by providing a distinct icon.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="manifest" href="/manifest.json" />
+    <link rel="icon" type="image/png" href="https://npoukowwhminfidgkriq.supabase.co/storage/v1/object/public/iconos-equipamiento/cazco.png" />
+    <link rel="apple-touch-icon" href="https://npoukowwhminfidgkriq.supabase.co/storage/v1/object/public/iconos-equipamiento/cazco.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maestros del Taller</title>
     <script src="https://cdn.tailwindcss.com"></script>
