feat: Add local Supabase credentials handling
This commit introduces a new mechanism for handling Supabase credentials, prioritizing environment variables for production deployments and falling back to a local `supabase-credentials.js` file for development.

This change involves:
- Removing the `@google/genai` dependency and associated service code, as it's no longer in use.
- Modifying `index.html` to include a script for local Supabase credentials.
- Updating `config.ts` to implement the credential loading logic.
- Adding a `public/supabase-credentials.js` file (ignored by Git) to store local credentials.
- Adjusting error messages in `App.tsx` to better guide users on Supabase configuration.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="apple-touch-icon" href="https://npoukowwhminfidgkriq.supabase.co/storage/v1/object/public/iconos-equipamiento/cazco.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maestros del Taller</title>
+    <!-- Credenciales locales de Supabase (ignoradas por Git). onerror previene errores en producción. -->
+    <script src="/supabase-credentials.js" onerror="this.remove()"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script>
@@ -35,7 +37,6 @@
     "react": "https://esm.sh/react@^18.3.1",
     "react-dom/client": "https://esm.sh/react-dom@^18.3.1/client",
     "react-dom/": "https://esm.sh/react-dom@^18.3.1/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.8.0",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.51.0",
     "leaflet": "https://esm.sh/leaflet@1.9.4",
     "react-leaflet": "https://esm.sh/react-leaflet@4.2.1"
