--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="apple-touch-icon" href="https://npoukowwhminfidgkriq.supabase.co/storage/v1/object/public/iconos-equipamiento/cazco.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maestros del Taller</title>
-    <!-- Credenciales locales de Supabase (ignoradas por Git). onerror previene errores en producción. -->
-    <script src="/supabase-credentials.js" onerror="this.remove()"></script>
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     <script>
@@ -58,5 +56,6 @@
         });
       }
     </script>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
