--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
     "react-dom/": "https://esm.sh/react-dom@^18.3.1/",
     "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.51.0",
     "leaflet": "https://esm.sh/leaflet@1.9.4",
-    "react-leaflet": "https://esm.sh/react-leaflet@4.2.1"
+    "react-leaflet": "https://esm.sh/react-leaflet@4.2.1",
+    "@google/genai": "https://esm.sh/@google/genai"
   }
 }
 </script>
