feat: Centralize Supabase and VAPID keys
Moves Supabase URL, anonymous key, and VAPID public key from hardcoded values and scattered comments into a new `constants.tsx` file.

This improves maintainability, reduces duplication, and provides clearer instructions for configuration. Includes defensive checks and console warnings for missing configurations to prevent runtime errors.

Also, implements lazy initialization for the Gemini AI client to avoid startup failures if the API key is not immediately available. The icon URL for notifications and the app manifest is now also sourced from this central constant file.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="manifest" href="/manifest.json" />
+    <!-- ATENCIÓN: Esta URL depende de la configuración en constants.tsx. Si la app no carga el ícono, verifica la SUPABASE_URL allí. -->
     <link rel="icon" type="image/png" href="https://npoukowwhminfidgkriq.supabase.co/storage/v1/object/public/iconos-equipamiento/cazco.png" />
     <link rel="apple-touch-icon" href="https://npoukowwhminfidgkriq.supabase.co/storage/v1/object/public/iconos-equipamiento/cazco.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
